# pyidrogeo

./: .gitignore  pyproject.toml
pyidrogeo/: api.py  encoder.py  models.py
tests/: test_api.py
