[project]
name = "pyidrogeo"
version = "0.2.3"
description = "Idrogeo API Library."
authors = [
    {name = "Andrea Antonello", email = "andrea.antonello@gmail.com"},
]
dependencies = [
    "requests==2.28.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
